# ScreenCasting

./: .gitignore  README.md  jitpack.yml  local.properties  settings.gradle
For_Screen_C/Screen_Client_C/: build.gradle  local.properties  settings.gradle
For_Screen_C/Screen_Client_C/lib_player/src/main/cpp/: CMakeLists.txt
For_Screen_C/Screen_Client_C/lib_player/src/main/cpp/include/: Android_log.h  RTPUnPacket.h
For_Screen_C/Screen_Client_C/lib_player/src/main/cpp/jb/: JitterBuffer.c
For_Screen_C/Screen_Client_C/lib_player/src/main/cpp/jb/include/: JitterBuffer.h
For_Screen_C/Screen_Client_C/lib_player/src/main/cpp/jni/: PlayerBridge.cpp
For_Screen_C/Screen_Client_C/lib_player/src/main/cpp/player/: Player.cpp  RTPUnpack.c  StateListener.cpp
For_Screen_C/Screen_Client_C/lib_player/src/main/cpp/player/include/: AVPacket.h  AsyncQueue.hpp  Player.h  PlayerInfo.h  StateListener.h  Utils.h
For_Screen_C/Screen_Puller/: build.gradle  local.properties  settings.gradle
For_Screen_C/Screen_Pusher/: .gitignore  build.gradle  settings.gradle
For_Screen_C/Screen_Server_C/: .gitignore  build.gradle  settings.gradle
For_Screen_java/Screen_Client_java/: local.properties  settings.gradle
For_Screen_java/Screen_Server_java/: build.gradle  settings.gradle
ScreenClient/: build.gradle  taike.jks
ScreenClient/lib_player/: build.gradle
ScreenProjectionApp/: .gitignore  settings.gradle
ScreenProjectionApp/ScreenClient/: build.gradle
ScreenProjectionApp/ScreenServer/: build.gradle
ScreenServer/: build.gradle
ScreenServer/lib_h264/src/main/cpp/: CMakeLists.txt
ScreenServer/lib_h264/src/main/cpp/include/: Android_log.h
ScreenServer/lib_h264/src/main/cpp/jni/: Bridge.cpp
ScreenServer/lib_h264/src/main/cpp/pack/: H264Pack.c
ScreenServer/lib_h264/src/main/cpp/socket/: Sender.c
app/: build.gradle
(+382 files in other folders)
